# JOS

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  test_bcrypt.rs
.github/: FUNDING.yml
.local/: Dockerfile  entrypoint.sh
.sqlx/: query-017f6897771d824dc5de022d3ed5e1971ce82a6b8ba10410e6a530137a243456.json  query-03c8f74fc1a3faebb90592ad7866fd973a78612edf7de050d02b6d6358898a73.json  query-058477ec0a09ab72271033d3c715a34630502d4da581a7a7612cfe19df4faecb.json  query-1166bf2496cd413e43b946e3694a8e5699305b854b74b998c34d96feb5e59b25.json  query-11ea1207c375d1b630dfa04facf37fc02f41960bb85b430ced8fb74ce01cb272.json  query-1614466426d42e51d7c4a67612605dca3d425ebe23d132cadd4cf15010406b6d.json  query-198068e982abad579a13127316953880f742120e18888bb1419a1572bd1b0ad4.json  query-2272dedbb9fd9dfdbfde911175407b557d6c13b211dd60be34e2219e5004ba94.json  query-233c121120d36745b315474d92b21e91a7719638e7daff684ab5d02f42aef09d.json  query-2c95cf2d7d643ecd3b3efefdc650ca43d55d83683feaa4694baf916e4352d0ef.json  query-2cf4b225ddc924da0afef7039466b493a60936be84ae10d1446f0dccc65ce691.json  query-2e49156df6dbd70d0ae7bedc78ebd57a11cbb4b94f7e3e57d6ea289a3ad0785f.json  query-2f01f08efc0756aaccdf44518ec5af93661673ff805d3853fe47fdc32eb5ec69.json  query-30fb271dc1da683323a5d63be6aefd2f979b2cdcadcfb4784bcf912854d99190.json  query-31ca08c42fb7823d291f9eef9a510827f1da03ec1fee3855b68d6e2879ceb528.json  query-369e2e1a18087330837f325daed27e06dc9be37b25e4ae2689c37f40f4adb717.json  query-3b9b422207341b452871d2d6bf30667aef13828e9a26e410a90dd6a8d994711c.json  query-403db54ced587a6a9f269e00a9e0118a1eae0b140787c5212f93e7c91044918e.json  query-4044002d9283ff2e929b3ce941f4e3593732d8899bf71a6b7bbe3b2fa40cbab5.json  query-42d7bd2a714a1e5a323eb621d2cecd89f69c6abe1b8a2ff0f08f74c8a6f15eb3.json  query-4487e96cfefe18d56865412a98310a1b4289c6098561fb19608304a1f597be10.json  query-464c07c61b4f35b04691808f11335f87e0050e50a7be200f0fe5e23ba6343ff2.json  query-4691d6282954711a6c7d94fd3cd79769e98a6a8cd8fe9ac1b8280a4de9c3adc9.json  query-481bb4e5f79de7c47fd1f32f0b1bddf69d40230f1544794e73e19a52a08227a7.json  query-4cc511273fc71f56aa31930c3df27b4b88bc7661f3c98590011a5a2f1a53fe0e.json  query-4ea314452b7985901626494b3f38ca932e807dc6abb4d8f2c9f4e5054d33c3e1.json  query-4f1ae5aa7dac80940f73b35a7096d2e34e9821edac3d988942a3773b07f2b7b0.json  query-5425922386747cf80b2a4804a13f0d524033d4427a6de548eb2619f2c8b2734b.json  query-548a2c4542b05214a6fa920e0819c128aac5ac4858fa1e81eaa7cdaa649f2b3e.json  query-58a854ececaa2b84f8714378274db9c7fc49c9dd1aad99a3496fe242b7deda5a.json  query-677f75bfeb8eaeee1532925ec715651775708d6650b9aab984d0713f0ade18cb.json  query-68875203d2d82c40236546aa1ca30702078dbbfbad74828c664b2b8da454e10d.json  query-69af712247c88d91f20010c34148ccb35154a6544f93bc40b9b61d1f66c474f1.json  query-69fd2b75729643e9d59ddf469748a19cfac0c6eac5ceb9168a60969964d70ec6.json  query-6eb134976250528281a2d0b9a823d28e485272dc344d5821c7860031f762620a.json  query-705069f62500047f29ac16f57044e4d5589f14ca5fe9768649bc3d818b5ef268.json  (+27 more)
api/: Cargo.toml
api/src/: lib.rs
api/src/http/: api.json  error.rs  mod.rs  open_api.rs
api/src/http/dtos/: auth.rs  common.rs  game_system.rs  mod.rs  request.rs  session.rs  session_management.rs  table.rs  table_member.rs  table_request.rs  user.rs
api/src/http/handlers/: auth.rs  docs.rs  game_system.rs  health.rs  mod.rs  search.rs  session.rs  session_checkin.rs  session_intent.rs  table.rs  table_members.rs  table_request.rs  user.rs
api/src/http/middleware/: auth.rs  cors.rs  tracing.rs
application/: Cargo.toml
application/src/: auth_service.rs  error.rs  game_system_service.rs  lib.rs  password_service.rs  search_service.rs  session_checkin_service.rs  session_intent_service.rs  session_service.rs  table_member_service.rs  table_request_service.rs  table_service.rs  user_service.rs
docs/: API_DOCUMENTATION.md  CONSTRAINT_MAPPING.md  ERROR_EXAMPLES.md  (+7 more)
domain/: Cargo.toml
domain/src/: auth.rs  error.rs  lib.rs  search.rs
domain/src/entities/: constants.rs  game_system.rs  mod.rs  refresh_token.rs  session.rs  session_checkin.rs  session_intent.rs  table.rs  table_member.rs  table_request.rs  update.rs  user.rs
domain/src/entities/commands/: game_system_commands.rs  mod.rs  refresh_token_commands.rs  session_checkin_commands.rs  session_commands.rs  session_intent_commands.rs  table_commands.rs  table_member_commands.rs  table_request_commands.rs  user_commands.rs
domain/src/repositories/: auth_repository.rs  base.rs  game_system_repository.rs  mod.rs  refresh_token_repository.rs  session_checkin_repository.rs  session_intent_repository.rs  session_repository.rs  table_member_repository.rs  table_repository.rs  table_request_repository.rs  user_repository.rs
domain/src/services/: auth_service.rs  game_system_service.rs  mod.rs  password_service.rs  session_checkin_service.rs  session_intent_service.rs  session_service.rs  table_member_service.rs  table_request_service.rs  table_service.rs  user_service.rs
infrastructure/: Cargo.toml
infrastructure/migrations/: 20250430230630_init_schema.up.sql  20250929163705_refresh_tokens.down.sql
infrastructure/src/: config.rs  constants.rs  error.rs  lib.rs  mod.rs  state.rs
infrastructure/src/persistence/: mod.rs
infrastructure/src/persistence/postgres/: constraint_mapper.rs  error.rs  mod.rs  postgres_pool.rs
infrastructure/src/persistence/postgres/models/: game_system.rs  mod.rs  refresh_token.rs  session.rs  session_checkin.rs  session_intent.rs  table.rs  table_member.rs  table_request.rs  user.rs
infrastructure/src/persistence/postgres/repositories/: game_system.rs  refresh_token.rs  session.rs  session_checkin.rs  session_intent.rs  table.rs  table_member.rs  table_request.rs  user.rs
infrastructure/src/security/: jwt.rs  password_hasher.rs
infrastructure/src/setup/: database.rs  logging.rs  mod.rs  server.rs
jos-cli/: Cargo.toml
jos-cli/src/: diagnostics.rs  lib.rs  main.rs  services.rs  setup.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  prelude.rs
(+395 files in other folders)
