[package]
name = "jos"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "./shared" }
domain = { path = "./domain" }
application = { path = "./application" }
infrastructure = { path = "./infrastructure" }
api = { path = "./api" }
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
futures = "0.3"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
axum-test = "*"
wiremock = "*"
serde_json = "1.0.120"
axum = { version = "0.8.6", features = ["http2"] }
dotenvy = "0.15.7"

[workspace]
members = ["api", "application", "domain", "infrastructure", "shared"]

[profile.release]
opt-level = 3
