[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
axum-extra = { workspace = true }
validator = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
