[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
async-trait = "0.1.88"
thiserror = "2.0.17"
