[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true, features = ["uuid", "chrono"] }
