[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
application = { path = "../application" }
dotenvy = "0.15.7"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "json",
] }
bcrypt = "0.17.1"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.88"
thiserror = "2.0.17"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
jsonwebtoken = "9.3.1"
validator = { version = "0.20.0", features = ["derive"] }
