[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
application = { path = "../application" }
dotenvy = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
