[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
async-trait = "0.1.88"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
