[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
validator = { workspace = true }
